--- a/elunic-workspace/apps/frontend/src/app/app.html
+++ b/elunic-workspace/apps/frontend/src/app/app.html
@@ -1,2 +1,40 @@
-<app-nx-welcome></app-nx-welcome>
-<router-outlet></router-outlet>
+<div class="login-container">
+  <p-card header="ERP Login" [style]="{ width: '400px', margin: 'auto' }">
+    <div class="flex flex-column gap-4">
+      <p-floatLabel>
+        <input pInputText id="email" [(ngModel)]="email" class="w-full" />
+        <label for="email">Username or Email</label>
+      </p-floatLabel>
+
+      <br />
+
+      <p-floatLabel>
+        <p-password
+          id="password"
+          [(ngModel)]="password"
+          [feedback]="false"
+          [toggleMask]="true"
+          styleClass="w-full"
+          [style]="{'width':'100%'}"
+        >
+        </p-password>
+        <label for="password">Password</label>
+      </p-floatLabel>
+
+      <br /><br />
+
+      <p-button
+        label="Sign In"
+        icon="pi pi-user"
+        class="w-full"
+        [style]="{'width':'100%'}"
+        (onClick)="login()"
+      >
+      </p-button>
+      <div *ngIf="loginResult" class="mt-3">
+        <p-message severity="success" text="Welcome back! Backend is connected."></p-message>
+        <p class="text-center mt-2">{{ loginResult.message }}</p>
+      </div>
+    </div>
+  </p-card>
+</div>
